<resources>
    <string name="app_name">iCare</string>
    <string name="no_function">No function module has been generated yet.</string>
    <string name="device_setting">Device Setting</string>
    <string name="regulate_distance">Regulate Distance</string>
    <string name="logout">Log Out</string>
    <string name="register">Register</string>
    <string name="enter_account">Please enter account</string>
    <string name="enter_password">Please enter password</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="breath_frequency">Respiratory rate</string>
    <string name="breath_frequency_unit">times/min</string>
    <string name="bed_state">Bed State</string>
    <string name="data_time">Data Time</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="wifi_switch">Wifi</string>
    <string name="wifi_name">Wifi name</string>
    <string name="wifi_password">Wifi password</string>
    <string name="wifi_text">WIFI Settings</string>
    <string name="set_wifi">Set up WiFi</string>
    <string name="connect_device">Please connect the device</string>
    <string name="measurement_result">Measurement results:</string>
    <string name="measurement_not_finish">Not yet finished </string>
    <string name="regulate_left">Current measurement:\nLying on the left side\nAfter lying down, please click to confirm </string>
    <string name="regulate_right">Current measurement:\nLying on the right side\nAfter lying down, please click to confirm </string>
    <string name="regulate_side">Current measurement:\nLying on the side\nAfter lying down, please click to confirm</string>
    <string name="regulate_bed_side">Current measurement:\nLying on the bedside\nAfter lying down, please click to confirm</string>
    <string name="regulate_end_bed">Current measurement:\nLying on the end of bed\nAfter lying down, please click to confirm</string>
    <string name="error_regulate_end_bed">The distance between the end of the bed is incorrect.</string>
    <string name="error_regulate_bed_side">The bedside distance is incorrect.</string>
    <string name="error_regulate_side">The lying distance is incorrect.</string>
    <string name="error_regulate_lie">The lie flat distance is incorrect.</string>
    <string name="regulate_lie">Current measurement:\nLying flat\nAfter lying down, please click to confirm </string>
    <string name="measurement_finish">Measurement completed</string>
    <string name="correct_distance">The correction distance is: </string>
    <string name="transmission_format">Transmission format: </string>
    <string name="check_wifi_info">Please confirm whether the wifi name and password have been entered</string>
    <string name="check_ble_connection">Please confirm whether the device is connected via Bluetooth </string>
    <string name="send_wifi_info">WIFI account password has been set to radar</string>
    <string name="connect_success">Connect Success</string>
    <string name="connect_finish">>Connect Finished</string>
    <string name="view_data">View data</string>
    <string name="scan_device">Scan</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="out_of_bed">Out Of Bed</string>
    <string name="on_bed">On bed</string>
    <string name="bind_success">Bind Success</string>
    <string name="bind_failed">Bind Failed</string>
    <string name="logout_message">When logging out, the device will be unbound at the same time. Are you sure you want to log out?</string>
    <string name="unbind_device">Unbind device</string>
    <string name="unbinding">Unbinding....</string>
    <string name="signing">Signing in....</string>
    <string name="unbind_success">Unbind successfully</string>
    <string name="unbind_failed">Unbind failed</string>
    <string name="bound">Bound</string>
    <string name="air_quality">Air quality</string>
    <string name="device_name">Device Name</string>
    <string name="no_data_text">--</string>
    <string name="bioradar">Bioradar</string>
    <string name="co2">CO2</string>
    <string name="ch2o">CH2O</string>
    <string name="tvoc">TVOC</string>
    <string name="pm2_5">PM2.5</string>
    <string name="pm10">PM10</string>
    <string name="temperature_unit">°C</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="co2_unit">ppm</string>
    <string name="air_unit">μg/m<sup>3</sup></string>
    <string name="humidity_unit">%RH</string>
    <string name="temperature_celsius_unit">°C</string>
    <string name="temperature_fahrenheit_unit">°F</string>
    <string name="air_box">Air Box</string>
    <string name="send_air_info">WIFI account password has been set to air box</string>
    <string name="connecting">connecting....</string>
    <string name="register_to_login">Register</string>
    <string name="account">account</string>
    <string name="password">password</string>
    <string name="confirm_pwd_register">Confirm password</string>
    <string name="email">email</string>
    <string name="next_step">Next</string>
    <string name="error_account_empty">Account cannot be null.</string>
    <string name="error_password_empty">Password cannot be null.</string>
    <string name="error_email_not_null">Email cannot be null</string>
    <string name="error_account_password_length">Please Enter 6 to 20 characters.</string>
    <string name="error_at_least_letter_and_number">Please enter at least one letter and one number.</string>
    <string name="error_invalid_email">Email format is error</string>
    <string name="double_pwd_not">The passwords which are entered twice are not consistent.</string>
    <string name="api_connect_fail">Connection Failed</string>
    <string name="net_connect_fail">"Network connection failed"</string>
    <string name="registering">Registering....</string>
    <string name="registration_success">Registration Successful!!</string>
    <string name="registration_failed">registration failed....</string>
    <string name="edit_person_info">Modify Info</string>
    <string name="complete">Complete</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="metric">Metric</string>
    <string name="british">British</string>
    <string name="select_birthday">select a date of birth</string>
    <string name="enter_true_height">enter the true height</string>
    <string name="enter_true_weight">enter the true weight</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="inch">inch</string>
    <string name="lb">lb</string>
    <string name="emergency_contact">Emergency Contact:</string>
    <string name="emergency_phone_numbers">Emergency telephone number:</string>
    <string name="installation_address">Installation Address:</string>
    <string name="address_ex">address</string>
    <string name="initial_sleep_period">Initial sleep period:</string>
    <string name="end_sleep_period">End sleep period:</string>
    <string name="out_of_bed_overtime_notification_time">Notice of leaving bed:</string>
    <string name="time_unit_minute">minute</string>
    <string name="not_going_to_bed_setting">Not in bed:</string>
    <string name="is_dangerous_person">Dangerous person:</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="error_name_empty">The name cannot be null.</string>
    <string name="error_name">The name cannot exceed 32 characters.</string>
    <string name="error_birthday_empty">Birthday cannot be null.</string>
    <string name="error_birthday">Birthday is incorrect.</string>
    <string name="error_height_empty">Height cannot be null.</string>
    <string name="error_weight_empty">Weight cannot be null.</string>
    <string name="error_height">The inputted height is incorrect.</string>
    <string name="error_weight">The inputted weight is incorrect.</string>
    <string name="error_emergency_contact_empty">The emergency contact cannot be null.</string>
    <string name="error_emergency_contact">The emergency contact cannot exceed 32 characters.</string>
    <string name="error_emergency_contact_phone_empty">An emergency call cannot be null.</string>
    <string name="error_installation_address_empty">The installation address contact cannot be null.</string>
    <string name="please_select_time">Select Time</string>
    <string name="data_modification">Personal Information is being modified …</string>
    <string name="upload_fail">Upload Fail</string>
    <string name="upload_success">Upload Success</string>
    <string name="profile_upload_failed">Personal Information upload failed.</string>
    <string name="profile_upload_succeed">Personal Information upload succeed.</string>
    <string name="no_name">Noname</string>
    <string name="change_password">Change Password</string>
    <string name="logout_success">Logout successful</string>
    <string name="caution">Caution!</string>
    <string name="warning_back">Personal information has not been saved.\n\nWould you want to leave?</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="account_is">Account：%s</string>
    <string name="error_old_password_empty">Old password cannot be null.</string>
    <string name="error_new_password_empty">New password cannot be null.</string>
    <string name="error_confirm_new_password">The New password and confirm password do not match.</string>
    <string name="error_confirm_new_password_empty">Confirm new password cannot be null.</string>
    <string name="password_change_succeed">Password change succeed.</string>
    <string name="password_change_succeed_message">Password changing is successful, please login again.</string>
    <string name="failed_change_password"> Failed to change password!!</string>
    <string name="forget_the_pwd">Forget password</string>
    <string name="get_the_password">Find password</string>
    <string name="error_account_length">Please Enter 6 to 20 characters.</string>
    <string name="system_letter">System Letter</string>
    <string name="system_letter_change_password">The system is sending a letter, please remember to change the password after login</string>
    <string name="about">About</string>
    <string name="app_version">APP Version:</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="agree_term">I agree with the above terms</string>
    <string name="have_agreed">Agreed</string>
    <string name="device_management_text">Device management</string>
    <string name="bedside_monitor_text">Bedside monitor</string>
    <string name="scanning_text">Scanning....</string>
    <string name="bind_device_text">binding device</string>
    <string name="bedside_monitor_abnormal_data">Record of sleep monitoring abnormalities</string>
    <string name="bedside_monitor_time_title">Time</string>
    <string name="bedside_monitor_state_title">State</string>
    <string name="activity_monitoring">User Activity Monitoring</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="temperature_calibration">Temperature Calibration</string>
    <string name="temperature_calibration_hit">Enter temperature between 35&#8211;42.</string>
    <string name="account_hint">Account must be 6&#8208;20 characters consisting of numbers and characters.</string>
    <string name="password_hint">Password must be 6&#8208;20 characters consisting of numbers and characters.</string>
    <string name="login">Sign in</string>
    <string name="exception_notification">Alert Message</string>
</resources>