<?xml version="1.0" encoding="utf-8"?><navigation xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/main_navigation"    app:startDestination="@id/main_fragment_navigation"><!--    <action--><!--        android:id="@+id/action_global_home_fragment"--><!--        app:destination="@id/bedsideMonitorFragment"--><!--        app:enterAnim="@android:anim/fade_in"--><!--        app:exitAnim="@android:anim/fade_out"--><!--        app:popEnterAnim="@android:anim/fade_in"--><!--        app:popExitAnim="@android:anim/fade_out" />-->    <navigation        android:id="@+id/main_fragment_navigation"        app:startDestination="@id/bedsideMonitorFragment">        <fragment            android:id="@+id/bedsideMonitorFragment"            android:name="com.docter.icare.ui.main.bedside.BedsideMonitorFragment"            android:label="@string/bedside_monitor_text"            tools:layout="@layout/fragment_bedside_monitor" >            <action                android:id="@+id/action_bedsideMonitorFragment_to_exceptionFragment"                app:destination="@id/exceptionFragment" />        </fragment>        <fragment            android:id="@+id/airQualityIndexFragment"            android:name="com.docter.icare.ui.main.aqi.AirQualityIndexFragment"            android:label="@string/air_quality"            tools:layout="@layout/fragment_air_quality_index" >            <action                android:id="@+id/action_airQualityIndexFragment_to_exceptionFragment"                app:destination="@id/exceptionFragment" />        </fragment>        <fragment            android:id="@+id/activityMonitoringFragment"            android:name="com.docter.icare.ui.main.uam.ActivityMonitoringFragment"            android:label="@string/activity_monitoring"            tools:layout="@layout/fragment_activity_monitoring" />        <fragment            android:id="@+id/exceptionFragment"            android:name="com.docter.icare.ui.exception.ExceptionFragment"            android:label="@string/exception_notification"            tools:layout="@layout/fragment_exception" />    </navigation><!--    <fragment--><!--        android:id="@+id/bedsideMonitorFragment"--><!--        android:name="com.docter.icare.ui.main.bedside.BedsideMonitorFragment"--><!--        android:label="@string/bedside_monitor_text"--><!--        tools:layout="@layout/fragment_bedside_monitor" />--><!--    <fragment--><!--        android:id="@+id/airQualityIndexFragment"--><!--        android:name="com.docter.icare.ui.main.aqi.AirQualityIndexFragment"--><!--        android:label="@string/air_quality"--><!--            tools:layout="@layout/fragment_air_quality_index" />--><!--    <fragment--><!--        android:id="@+id/activityMonitoringFragment"--><!--        android:name="com.docter.icare.ui.main.uam.ActivityMonitoringFragment"--><!--        android:label="@string/activity_monitoring"--><!--        tools:layout="@layout/fragment_activity_monitoring" />--><!--    <fragment--><!--        android:id="@+id/deviceFragment"--><!--        android:name="com.docter.icare.ui.main.device.DeviceFragment"--><!--        android:label="@string/device_management_text"--><!--        tools:layout="@layout/fragment_device" />--><!--    <action--><!--        android:id="@+id/action_global_device_navigation"--><!--        app:destination="@id/device_navigation"--><!--        app:enterAnim="@android:anim/fade_in"--><!--        app:exitAnim="@android:anim/fade_out"--><!--        app:popEnterAnim="@android:anim/fade_in"--><!--        app:popExitAnim="@android:anim/fade_out"/>-->    <navigation        android:id="@+id/device_navigation"        app:startDestination="@id/deviceFragment">        <fragment            android:id="@+id/deviceFragment"            android:name="com.docter.icare.ui.main.device.DeviceFragment"            android:label="@string/device_management_text"            tools:layout="@layout/fragment_device" >            <action                android:id="@+id/action_deviceFragment_to_deviceScanFragment"                app:destination="@id/deviceScanFragment" />        </fragment>        <fragment            android:id="@+id/deviceScanFragment"            android:name="com.docter.icare.ui.main.device.scan.DeviceScanFragment"            android:label="@string/device_management_text"            tools:layout="@layout/fragment_device_scan" />    </navigation>    <fragment        android:id="@+id/personInfoContentFragment"        android:name="com.docter.icare.ui.personInfo.content.PersonInfoContentFragment"        android:label="fragment_person_info_content"        tools:layout="@layout/fragment_person_info_content" />    <fragment        android:id="@+id/personInfoEditFragment"        android:name="com.docter.icare.ui.personInfo.edit.PersonInfoEditFragment"        android:label="fragment_person_info_edit"        tools:layout="@layout/fragment_person_info_edit" /></navigation>