<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dialogBackgroundColor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_alert_dialog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.85">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textColor="@color/dialogTitleTextColor"
                android:textSize="@dimen/textSizeMedium"
                app:firstBaselineToTopHeight="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingBottom="20dp"
                android:textColor="@color/dialogMessageTextColor"
                android:textSize="@dimen/textSizeSmall"
                app:firstBaselineToTopHeight="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                tools:text="@string/message" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:paddingStart="12dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/positive"
                    style="@style/TextButtonStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/yes" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/negative"
                    style="@style/TextButtonStyle"
                    android:layout_marginEnd="8dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toStartOf="@+id/positive"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/no"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
