<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.start.login.LoginFragment">

    <data>

        <variable
            name="click"
            type="android.view.View.OnClickListener" />

        <variable
            name="entity"
            type="com.docter.icare.data.entities.view.LoginEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_welcome">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintVertical_weight="2"
            app:layout_constraintBottom_toTopOf="@+id/iv_notyet_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_logo" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_notyet_login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/icon_notyet_login"
            app:layout_constraintVertical_weight="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintBottom_toTopOf="@+id/layout_login"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintVertical_weight="8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_notyet_login">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_account_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/account"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeMedium"
                app:layout_constraintBottom_toBottomOf="@+id/et_account"
                app:layout_constraintEnd_toStartOf="@+id/et_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_account" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/background_input_box_primary_stroke"
                android:gravity="center"
                android:hint="@string/account_hint"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:padding="16dp"
                android:text="@={entity.account}"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/textSizeMedium"
                app:layout_constraintBottom_toTopOf="@+id/et_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_account_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeMedium"
                app:layout_constraintBottom_toBottomOf="@+id/et_password"
                app:layout_constraintEnd_toStartOf="@+id/et_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/background_input_box_primary_stroke"
                android:gravity="center"
                android:hint="@string/password_hint"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:padding="16dp"
                android:text="@={entity.password}"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/textSizeMedium"
                app:layout_constraintBottom_toTopOf="@+id/btn_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_password_title"
                app:layout_constraintTop_toBottomOf="@+id/et_account" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_login_white"
                android:onClick="@{click::onClick}"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textSizeMedium"
                app:backgroundTint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/tv_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password"
                app:layout_constraintWidth_percent="0.7" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:background="?selectableItemBackground"
                android:onClick="@{click::onClick}"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeMedium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>