<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.dialog.TemperatureSetDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dialogBackgroundColor">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_alert_dialog"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.8">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="32sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/temperature_calibration" />
                <View
                    android:id="@+id/div"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/hintColor"/>
<!--                android:imeOptions="actionNext"-->
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/background_input_box_primary_stroke_blue"
                    android:gravity="center"
                    android:hint="@string/temperature_calibration_hit"
                    android:inputType="numberDecimal"
                    android:digits="0123456789."
                    android:maxLength="5"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/textSizeMedium"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/confirm"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_marginStart="1dp"
                        android:layout_marginEnd="3dp"
                        android:gravity="center"
                        android:background="@drawable/background_device_type"
                        android:text="@string/confirm"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        app:layout_constraintHorizontal_weight="5"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/cancel"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/cancel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="1dp"
                        android:gravity="center"
                        android:background="@drawable/background_device_type"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        app:layout_constraintHorizontal_weight="5"
                        app:layout_constraintBottom_toBottomOf="@id/confirm"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/confirm"
                        app:layout_constraintTop_toTopOf="@id/confirm" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>